some changed in employees list page !

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://static.vecteezy.com/system/resources/previews/007/121/544/non_2x/customer-retention-and-returning-clients-line-icon-vector.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>EmployeeFlow</title>
     <style>
       html,body{
         margin: 0;
